--- a/GIIS/lab7/main.html
+++ b/GIIS/lab7/main.html
@@ -1,1 +1,151 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Триангуляция Делоне и Диаграмма Вороного</title>
+  <script src="https://d3js.org/d3.v7.min.js "></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 15px;
+      flex-wrap: wrap;
+    }
+
+    .controls button,
+    .controls label {
+      padding: 8px 12px;
+      font-size: 14px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+      transition: background-color 0.3s;
+    }
+
+    .controls button:hover {
+      background-color: #0056b3;
+    }
+
+    svg {
+      display: block;
+      margin: 0 auto;
+      background-color: #fff;
+      border: 1px solid #ccc;
+    }
+  </style>
+</head>
+<body>
+
+<h1>Триангуляция Делоне и Диаграмма Вороного</h1>
+
+<div class="controls">
+  <button onclick="clearPoints()">Очистить точки</button>
+  <button onclick="generateRandomPoints(20)">Случайные точки</button>
+  <label><input type="checkbox" id="showTriangulation" checked /> Триангуляция</label>
+  <label><input type="checkbox" id="showVoronoi" checked /> Вороной</label>
+  <label><input type="checkbox" id="showPoints" checked /> Точки</label>
+</div>
+
+<svg id="visualization" width="800" height="600"></svg>
+
+<script>
+  const svg = d3.select("#visualization");
+  let points = [];
+  let delaunay = null;
+  let voronoi = null;
+
+  const showTriangulationInput = document.getElementById("showTriangulation");
+  const showVoronoiInput = document.getElementById("showVoronoi");
+  const showPointsInput = document.getElementById("showPoints");
+
+  function updateVisualization() {
+    svg.selectAll("*").remove();
+
+    if (points.length === 0) return;
+
+    const width = +svg.attr("width");
+    const height = +svg.attr("height");
+
+    delaunay = d3.Delaunay.from(points);
+    voronoi = delaunay.voronoi([0, 0, width, height]);
+
+    if (showTriangulationInput.checked) {
+      svg.append("g")
+        .attr("class", "triangulation")
+        .selectAll("path")
+        .data(delaunay.trianglePolygons())
+        .enter().append("path")
+        .attr("d", d => "M" + d.join("L") + "Z")
+        .style("stroke", "green")
+        .style("stroke-width", 1)
+        .style("fill", "none");
+    }
+
+    if (showPointsInput.checked) {
+      svg.append("g")
+        .attr("class", "points")
+        .selectAll("circle")
+        .data(points)
+        .enter().append("circle")
+        .attr("cx", d => d[0])
+        .attr("cy", d => d[1])
+        .attr("r", 3)
+        .style("fill", "red");
+    }
+
+    if (showVoronoiInput.checked) {
+      svg.append("g")
+        .attr("class", "voronoi")
+        .selectAll("path")
+        .data(voronoi.cellPolygons())
+        .enter().append("path")
+        .attr("d", d => "M" + d.map(p => p.join(",")).join("L") + "Z")
+        .style("stroke", "black")
+        .style("stroke-width", 1)
+        .style("fill", "none");
+    }
+  }
+
+  function handleMouseClick(event) {
+    const point = d3.pointer(event);
+    points.push(point);
+    updateVisualization();
+  }
+
+  function clearPoints() {
+    points = [];
+    updateVisualization();
+  }
+
+  function generateRandomPoints(count) {
+    const width = +svg.attr("width");
+    const height = +svg.attr("height");
+    points = Array.from({ length: count }, () => [Math.random() * width, Math.random() * height]);
+    updateVisualization();
+  }
+
+  svg.on("click", handleMouseClick);
+
+  showTriangulationInput.addEventListener("change", updateVisualization);
+  showVoronoiInput.addEventListener("change", updateVisualization);
+  showPointsInput.addEventListener("change", updateVisualization);
+</script>
+
+</body>
+</html>
